src/test/deca/context/valid/created/objet/field_call.deca
// description :
//      appel de la methode incorrecte : trop de parametre
// Resultat
//      ok
class A {
    int x ;
    
}

{
    A a = new A() ;
    a.x;
}